--- a/CommandBus.Tests/CommandBus.Tests.csproj
+++ b/CommandBus.Tests/CommandBus.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="moq" Version="4.16.1" />
     <PackageReference Include="NUnit" Version="3.13.1" />
