--- a/CommandBus/CommandBus.csproj
+++ b/CommandBus/CommandBus.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
 
-    <PackageId>CommandBus</PackageId>
-    <Version>2.1.0</Version>
+    <PackageId>CommandBusio</PackageId>
+    <Version>1.0.1</Version>
     <Authors>Sam Watson</Authors>
     <Company>Sam Watson</Company>
   </PropertyGroup>
